--- a/advert_page.html
+++ b/advert_page.html
@@ -131,7 +131,7 @@
 			<!-- begin advert-wrap  -->
 			<div class="advert-wrap">
 				<!-- begin advert-in  -->
-				<div class="advert-in">
+				<div class="advert-in col-xs-8">
 					<h2 class="advert-title">плащ палатка солдатская</h2>
 					<!-- begin advert-info  -->
 					<div class="advert-info">
