--- a/advert_list.html
+++ b/advert_list.html
@@ -904,7 +904,7 @@
 			<div class="footer-bottom col-xs-12">
 				<a href="#" class="footer-logo"><img src="img/logo-2.png" alt="Vespoo"></a>
 				<p>&copy; Vespoo.com. Все права защищены.</p>
-				<p>Разработка и поддержка <a href="#">MTITM &amp; Koldios</a></p>
+				<p>Разработка и поддержка <a href="#">MTITM</a></p>
 			</div>
 			<!-- end footer-bottom -->
 			
