--- a/advert_page.html
+++ b/advert_page.html
@@ -73,7 +73,9 @@
 						<input type="text" id="cityBox" placeholder="Начните вводить город">
 						<a href="#" class="clear-input icon-all-close"></a>
 					</div>
-					<div class="region-wrap"></div>
+					<div class="region-wrap">
+						<ul class="region-list"><li>Автономная Республика Крым </li><li>Винницкая область</li><li>Волынская область</li><li>Днепропетровская область</li><li>Донецкая область</li><li>Житомирская область</li><li>Закарпатская область</li><li>Запорожская область</li><li>Ивано-Франковская область</li><li>Киевская область</li><li>Кировоградская область</li><li>Луганская область</li><li>Львовская область</li><li>Николаевская область</li><li>Одесская область</li><li>Полтавская область</li><li>Ровенская область</li><li>Сумская область</li><li>Тернопольская область</li><li>Харьковская область</li><li>Херсонская область</li><li>Хмельницкая область</li><li>Черкасская область</li><li>Черниговская область</li><li>Черновицкая область</li></ul>
+					</div>
 					<div class="city-wrap"></div>
 					<div class="exit-location-wrap">
 						закрыть <span>X</span>
