--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 					<div class="region-wrap">
 						<ul class="region-list"><li>Автономная Республика Крым </li><li>Винницкая область</li><li>Волынская область</li><li>Днепропетровская область</li><li>Донецкая область</li><li>Житомирская область</li><li>Закарпатская область</li><li>Запорожская область</li><li>Ивано-Франковская область</li><li>Киевская область</li><li>Кировоградская область</li><li>Луганская область</li><li>Львовская область</li><li>Николаевская область</li><li>Одесская область</li><li>Полтавская область</li><li>Ровенская область</li><li>Сумская область</li><li>Тернопольская область</li><li>Харьковская область</li><li>Херсонская область</li><li>Хмельницкая область</li><li>Черкасская область</li><li>Черниговская область</li><li>Черновицкая область</li></ul>
 					</div>
-					<div class="city-wrap"></div>
+					<div class="city-wrap">
+						<ul class="city-list">
+							<li>Киев</li><li>Белая Церковь</li><li>Буча</li><li>Иванков</li><li>Борисполь</li>
+						</ul>
+					</div>
 					<div class="exit-location-wrap">
 						закрыть <span>X</span>
 					</div>
