--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				<form action="#" id="searchForm" class="form-search">
 					<div class="form-group location col-xs-3">
 						<input type="text" class="form-control field search city-search" id="cityCurrent" placeholder="Город, область...">
+						<input type="hidden" id='icCurrent' value="">
 							<a href="#" class="clear-input reset icon-all-close"></a>
 					</div>
 					<div class="form-group col-xs-4">
@@ -75,11 +76,16 @@
 						<a href="#" class="clear-input icon-all-close"></a>
 					</div>
 					<div class="region-wrap">
-						<ul class="region-list"><li>Автономная Республика Крым </li><li>Винницкая область</li><li>Волынская область</li><li>Днепропетровская область</li><li>Донецкая область</li><li>Житомирская область</li><li>Закарпатская область</li><li>Запорожская область</li><li>Ивано-Франковская область</li><li>Киевская область</li><li>Кировоградская область</li><li>Луганская область</li><li>Львовская область</li><li>Николаевская область</li><li>Одесская область</li><li>Полтавская область</li><li>Ровенская область</li><li>Сумская область</li><li>Тернопольская область</li><li>Харьковская область</li><li>Херсонская область</li><li>Хмельницкая область</li><li>Черкасская область</li><li>Черниговская область</li><li>Черновицкая область</li></ul>
+						<ul class="region-list"><li id="reg1">Автономная Республика Крым </li><li id="reg2">Винницкая область</li></ul>
 					</div>
-					<div class="city-wrap">
+					<div class="city-wrap" id="reg1">
 						<ul class="city-list">
-							<li>Киев</li><li>Белая Церковь</li><li>Буча</li><li>Иванков</li><li>Борисполь</li>
+							<li id="city1-1">Киев</li><li id="city1-2">Белая Церковь</li><li id="city1-3">Буча</li>
+						</ul>
+					</div>
+					<div class="city-wrap" id="reg2">
+						<ul class="city-list">
+							<li id="city2-1">Буча</li><li id="city2-2">Иванков</li><li id="city2-2">Борисполь</li>
 						</ul>
 					</div>
 					<div class="exit-location-wrap">
