--- a/help.html
+++ b/help.html
@@ -141,24 +141,23 @@
 					<!-- begin help-aside  -->
 					<div class="help-aside col-xs-4">
 						<ul class="nav-help">
-							<li class="is-active"><a href="#">Топ-10 вопросов<i class="icon-all-more-bot-orange"></i></a></li>
-							<li>
+							<li  class="is-active " list="l1">
 								<a href="#">Топ-10 вопросов<i class="icon-all-more-bot-orange"></i></a>
 								<ul class="nav-help-sub">
-									<li><a href="#">О нас</a></li>
-									<li><a href="#">Правила публикации объявлений</a></li>
-									<li><a href="#">Список запрещенных товаров, услуг</a></li>
+									<li><a name="help1" href="#">О нас</a></li>
+									<li><a name="help2" href="#">Правила публикации объявлений</a></li>
+									<li ><a name="help3" href="#">Список запрещенных товаров, услуг</a></li>
 								</ul>
 							</li>
-							<li>
+							<li  list="l2">
 								<a href="#">Объявления<i class="icon-all-more-bot-orange"></i></a>
 								<ul class="nav-help-sub">
-									<li><a href="#">Как разместить объявление на сайте OLX</a></li>
-									<li><a href="#">Как добавить фотографии к объявлению</a></li>
-									<li><a href="#">Как составить привлекательное объявление?</a></li>
+									<li><a name="help4" href="#">Как разместить объявление на сайте OLX</a></li>
+									<li><a name="help5" href="#">Как добавить фотографии к объявлению</a></li>
+									<li><a name="help6" href="#">Как составить привлекательное объявление?</a></li>
 								</ul>
 							</li>
-							<li>
+							<li  list="l3">
 								<a href="#">Как рекламировать объявления<i class="icon-all-more-bot-orange"></i></a>
 								<ul class="nav-help-sub">
 									<li><a href="#">Порядок оплаты</a></li>
@@ -166,7 +165,7 @@
 									<li><a href="#">Стоимость услуг</a></li>
 								</ul>
 							</li>
-							<li>
+							<li  list="l4">
 								<a href="#">Как продавать безопасно<i class="icon-all-more-bot-orange"></i></a>
 								<ul class="nav-help-sub">
 									<li><a href="#">Как связаться с автором объявления?</a></li>
@@ -180,7 +179,227 @@
 
 					<!-- begin help-in  -->
 					<div class="help-in col-xs-8">
-						<ul class="help-list">
+						<ul class="help-list" id="l1">
+							<!-- begin element -->
+							<li>
+								<p>Как продавать безопасно<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li id='help2'>
+								<p>Как разместить объявление на сайте Vespoo<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+									<div class="text-center">
+										<img src="img/content/help-img.jpg" alt="some-img">
+									</div>
+									<ol>
+										<li>Составьте заголовок предлагаемого вами товара/услуги. Он должен быть понятным, грамотным и привлекательным, содержать наименование вашего товара/услуги.</li>
+										<li>Выберите подходящие раздел и рубрику, в которых вы хотите разместить свое объявление - так ваше объявление получит наибольшее количество откликов. Вы можете заранее узнать нужную рубрику, найдя по поиску на сайте объявления, подобные вашему, и опубликовать свое в том же разделе.</li>
+										<li>Определите, к какому типу относится ваше объявление - предложение или спрос (только для рубрик Работа и Недвижимость). Выберите параметр «Предлагаю», если вы предлагаете товар/услугу или параметр «Ищу», если вы хотите что-то купить или найти.</li>
+										<li>Укажите цену - данное поле обязательно! Если вы готовы к пересмотру указанной цены, выберите параметр «Торг возможен», если вы намерены обменять товар - «Обмен», а если вы готовы подарить товар, выберите параметр «Бесплатно». Указывайте реальную цену, а не условную вроде 1 грн., 2 руб. и т.д.</li>
+										<li>Выберите параметр «Частное лицо», если вы предлагаете собственные товары или «Бизнес» - если вы представляете агентство, интернет-магазин, компанию, частный бизнес.</li>
+										<li>Добавьте описание предлагаемого вами товара/услуги, содержащее как можно больше подробной информации. Это позволит быстрее продать товар и избежать дополнительных вопросов со стороны потенциальных покупателей. Как создать привлекательный текст объявления, читайте <a href="#">здесь</a>.</li>
+										<li>Добавьте фотографии. Объявления с качественными фотографиями получают в среднем в 3-5 раз больше откликов, чем без фото! Вы можете добавить максимум 8 фотографий в формате jpg, gif, png, не более 5 Мбайт и 2000x2000 px. Подробную информацию о добавлении фотографий можно найти <a href="#">здесь</a>.</li>
+										<li>Укажите регион, город, район, станцию метро – это поможет вашему покупателю/потребителю услуг понять, где вы находитесь.</li>
+										<li>Введите ваш email-адрес. Он не будет отображаться на странице с объявлениями. E-mail необходим для активации вашего объявления и входа в личную учетную запись. Также укажите альтернативные способы связи - телефон, ICQ или Skype. Это даст возможность общаться с большим количеством потенциальных покупателей.</li>
+										<li>Активация объявления. На ваш e-mail будет отправлена ссылка активации объявления. Перейдите по ней для публикации объявления. Объявления, публикуемые зарегистрированными и авторизированными пользователями, не требуют активации и сразу же публикуются на сайте OLX.ua.</li>
+										<li>Для завершения публикации нажмите кнопку «Опубликовать».</li>
+									</ol>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Личная учетная запись «Мой профиль»<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>	
+							<li id="help1">
+								<p>О нас<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Забыли пароль?<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Преимущества платных услуг<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li id='help3'>
+								<p>Список запрещенных товаров, услуг<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Избранные результаты поиска<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Почему мое объявление удалено<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Обратная связь<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Как составить привлекательное объявление<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+						</ul>
+						<ul class="help-list" id="l2">
+							<!-- begin element -->
+						
+							<li id="help4">
+								<p>Личная учетная запись «Мой профиль»<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>	
+							<li id="help5">
+								<p>О нас<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>	
+							<li id="help6">
+								<p>Личная учетная запись «Мой профиль»<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Забыли пароль?<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Преимущества платных услуг<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Список запрещенных товаров, услуг<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+						</ul>
+						<ul class="help-list" id="l3">
+							<!-- begin element -->
+							<!-- begin element -->
+							<li>
+								<p>Правила публикации объявлений<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+									<div class="text-center">
+										<img src="img/content/help-img.jpg" alt="some-img">
+									</div>
+									<ol>
+										<li>Составьте заголовок предлагаемого вами товара/услуги. Он должен быть понятным, грамотным и привлекательным, содержать наименование вашего товара/услуги.</li>
+										<li>Выберите подходящие раздел и рубрику, в которых вы хотите разместить свое объявление - так ваше объявление получит наибольшее количество откликов. Вы можете заранее узнать нужную рубрику, найдя по поиску на сайте объявления, подобные вашему, и опубликовать свое в том же разделе.</li>
+										<li>Определите, к какому типу относится ваше объявление - предложение или спрос (только для рубрик Работа и Недвижимость). Выберите параметр «Предлагаю», если вы предлагаете товар/услугу или параметр «Ищу», если вы хотите что-то купить или найти.</li>
+										<li>Укажите цену - данное поле обязательно! Если вы готовы к пересмотру указанной цены, выберите параметр «Торг возможен», если вы намерены обменять товар - «Обмен», а если вы готовы подарить товар, выберите параметр «Бесплатно». Указывайте реальную цену, а не условную вроде 1 грн., 2 руб. и т.д.</li>
+										<li>Выберите параметр «Частное лицо», если вы предлагаете собственные товары или «Бизнес» - если вы представляете агентство, интернет-магазин, компанию, частный бизнес.</li>
+										<li>Добавьте описание предлагаемого вами товара/услуги, содержащее как можно больше подробной информации. Это позволит быстрее продать товар и избежать дополнительных вопросов со стороны потенциальных покупателей. Как создать привлекательный текст объявления, читайте <a href="#">здесь</a>.</li>
+										<li>Добавьте фотографии. Объявления с качественными фотографиями получают в среднем в 3-5 раз больше откликов, чем без фото! Вы можете добавить максимум 8 фотографий в формате jpg, gif, png, не более 5 Мбайт и 2000x2000 px. Подробную информацию о добавлении фотографий можно найти <a href="#">здесь</a>.</li>
+										<li>Укажите регион, город, район, станцию метро – это поможет вашему покупателю/потребителю услуг понять, где вы находитесь.</li>
+										<li>Введите ваш email-адрес. Он не будет отображаться на странице с объявлениями. E-mail необходим для активации вашего объявления и входа в личную учетную запись. Также укажите альтернативные способы связи - телефон, ICQ или Skype. Это даст возможность общаться с большим количеством потенциальных покупателей.</li>
+										<li>Активация объявления. На ваш e-mail будет отправлена ссылка активации объявления. Перейдите по ней для публикации объявления. Объявления, публикуемые зарегистрированными и авторизированными пользователями, не требуют активации и сразу же публикуются на сайте OLX.ua.</li>
+										<li>Для завершения публикации нажмите кнопку «Опубликовать».</li>
+									</ol>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Личная учетная запись «Мой профиль»<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Забыли пароль?<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Преимущества платных услуг<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Список запрещенных товаров, услуг<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Избранные результаты поиска<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Почему мое объявление удалено<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Обратная связь<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+							<!-- begin element -->
+							<li>
+								<p>Как составить привлекательное объявление<i class="icon-all-more-top-viollet"></i></p>
+								<div class="help-content">
+									<p>На сайте vespoo.ua вы можете опубликовать свои объявления бесплатно, легко и быстро! для этого просто нажмите кнопку «подать объявление» в правом верхнем углу главной страницы.</p>
+								</div>
+							</li>
+						</ul>
+						<ul class="help-list" id="l4">
 							<!-- begin element -->
 							<li>
 								<p>Как продавать безопасно<i class="icon-all-more-top-viollet"></i></p>
