--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<!-- end header__top -->
 				
 				<form action="#" id="searchForm" class="form-search">
-					<div class="form-group location col-xs-3">
+					<div class="form-group location col-xs-4">
 						<input type="text" class="form-control field search city-search" id="cityCurrent" placeholder="Город, область...">
 						<input type="hidden" id='icCurrent' value="">
 							<a href="#" class="clear-input reset icon-all-close"></a>
@@ -93,6 +93,14 @@
 					</div>
 				</div>
 				<!-- end location-wrap -->
+				<div class="search-city">
+					<p>Где вы:</p>
+					<button  class="take-city">Киев</button>
+					<button  class="take-city">Одесса</button>
+					<div class="search-city-line"></div>
+					<button class="take-searchForm">Выбрать город</button>
+					<i>X</i>
+				</div>
 			</div>
 			</div>
 		</div>
