--- a/advertisment is inactive.html
+++ b/advertisment is inactive.html
@@ -26,13 +26,12 @@
 	<div id="main" class="wrapper">
 		<!-- begin banner-top -->
 		<div class="banner-top">
-			<a href="#" class="banner-top-in"></a>
+			<a href="#" class="banner-top__in"></a>
 			<button class="close-banner-fix">x</button>
 		</div>
 		<!-- end banner-top -->
 		
-			<!-- begin header  -->
-		
+		<!-- begin header  -->
 		<div class="header" name='header'>
 			<div class="container" >
 				<div class="row no-margin">
@@ -48,65 +47,11 @@
 					</ul>
 				</div>
 				<!-- end header__top -->
-
-				<form action="#" id="searchForm" class="form-search">
-					<div class="form-group location col-xs-4 no-padding">
-						<input type="text" class="form-control field search city-search" id="cityCurrent" placeholder="Город, область...">
-						<input type="hidden" id='icCurrent' value="">
-							<a href="#" class="clear-input reset icon-all-close"></a>
-					</div>
-					<div class="form-group col-xs-4 no-padding">
-					   		<input type="text" class="form-control field search advert-search" placeholder="8 350 432 объявлений">
-					</div>
-				 		<button type="submit" class="col-xs-3 btn btn-default field submit">Поиск</button>
-
-				</form>
-
-				<!-- begion location-wrap -->
-				<div class="location-wrap">
-					<div class="location-title">
-						<button class="location-title-all">Искать по всей стране</button>
-						<br>
-
-						<button class="location-title-region region-hover">Искать по всей области</button>
-						<button class="location-title-this-region"></button>
-						<button class="location-title-back">вернуться к выбору области</button>
-					</div>
-					<div class="search-city-wrap">
-						<input type="text" id="cityBox" placeholder="Начните вводить город">
-						<a href="#" class="clear-input icon-all-close"></a>
-					</div>
-					<div class="region-wrap">
-						<ul class="region-list"><li id="reg1">Автономная Республика Крым </li><li id="reg2">Винницкая область</li></ul>
-					</div>
-					<div class="city-wrap" id="reg1">
-						<ul class="city-list">
-							<li id="city1-1">Киев</li><li id="city1-2">Белая Церковь</li><li id="city1-3">Буча</li>
-						</ul>
-					</div>
-					<div class="city-wrap" id="reg2">
-						<ul class="city-list">
-							<li id="city2-1">Буча</li><li id="city2-2">Иванков</li><li id="city2-2">Борисполь</li>
-						</ul>
-					</div>
-					<div class="exit-location-wrap">
-						закрыть <span>X</span>
-					</div>
-				</div>
-				<!-- end location-wrap -->
-				<div class="search-city">
-					<p>Где вы:</p>
-					<button  class="take-city">Киев</button>
-					<button  class="take-city">Одесса</button>
-					<div class="search-city-line"></div>
-					<button class="take-searchForm">Выбрать город</button>
-					<i>X</i>
-				</div>
 			</div>
 			</div>
 		</div>
 
-		<!-- end header -->
+		<!-- end header --><!-- end header -->
 
 		<!-- begin body-branding  -->
 		<div class="body-branding">
@@ -134,7 +79,7 @@
 		<!-- end body-branding -->
 
 		<!-- begin content-wrap  -->
-		<div class="content-wrap container">
+		<div class="content-wrap container inactive">
 			<!-- begin breadcrumbs  -->
 			<div class="breadcrumbs">
 				<ul class="breadcrumbs-list">
@@ -145,17 +90,19 @@
 			</div>
 			<!-- end breadcrumbs -->
 
-			<!-- begin banner-inner__top  -->
+			<!-- begin banner-inner-top  -->
 			<div class="banner-inner-top">
 				<a href="#"><img src="img/banners/banner-inner-top.jpg" alt="banner"></a>
 			</div>
-			<!-- end banner-inner__top -->
-
+			<!-- end banner-inner-top -->
+			<div class="inactive-message">
+				<p>Обьявление не активно, в связи с превышением лимита активных обьявлений в этой категории. <a href="">Нажмите здесь</a>, чтобы активировать свое обьявление.</p>
+			</div>
 			<!-- begin advert-wrap  -->
 			<div class="advert-wrap">
 				<!-- begin advert-in  -->
-				<div class="advert-in col-xs-8">
-					<h2 class="advert-title">плащ палатка солдатская</h2>
+				<div class="advert-in">
+					<h2 class="advert-title">ПРОДАМ СЕКРЕТНЫЙ ТОВАР ПРОДАМ СЕКРЕТНЫЙ ТОВАР ПРОДАМ!!!  </h2>
 					<!-- begin advert-info  -->
 					<div class="advert-info">
 						<a href="#" class="show-map-link">Львов, Франковский район, Львовская область</a>
@@ -189,11 +136,11 @@
 								</a>
 							</div>
 						</div>
-						<p class="advert-photo-empty">Без фото</p>
+						<p class="advert-phot-empty">Без фото</p>
 					</div>
 					<!-- end advert-photo -->
 
-					<!-- begin advert-desc-list -->
+					<!-- begin advert-desc__list -->
 					<div class="advert-desc-list">
 						<!-- begin row -->
 						<div class="row">
@@ -218,7 +165,7 @@
 							</div>
 						</div>
 					</div>
-					<!-- end advert-desc-list -->
+					<!-- end advert-desc__list -->
 
 					<h3 class="title-sm">Описание товара</h3>
 					<p class="advert-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Нужно ведь проверить и кириллицу! Нужно ведь проверить и кириллицу! Нужно ведь проверить и кириллицу! Нужно ведь проверить и кириллицу! Нужно ведь проверить и кириллицу! Нужно ведь проверить и кириллицу! Нужно ведь проверить и кириллицу!</p>
@@ -585,19 +532,59 @@
 				<div class="show-all-btn">
 					<a href="#">Смотреть все похожие объявления</a>
 				</div>
+			<!-- begin pagination  -->
+			<div class="pagination">
+				<!-- begin pagination-list  -->
+				<ul class="pagination-list">
+					<li class="is-active"><a href="#">1</a></li>
+					<li><a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
+					<li><a href="#">5</a></li>
+					<li><a href="#">6</a></li>
+					<li><a href="#">7</a></li>
+					<li><a href="#">8</a></li>
+					<li><a href="#">9</a></li>
+					<li><a href="#">10</a></li>
+					<li><a href="#">11</a></li>
+					<li><a href="#">12</a></li>
+					<li><a href="#">13</a></li>
+					<li><a href="#">...</a></li>
+					<li><a href="#">99</a></li>
+				</ul>
+				<!-- end pagination-list -->
+
+				<!-- begin pagination-number  -->
+				<div class="pagination-number">
+					<span>Перейти на страницу</span>
+					<form action="#" class="form-pagination">
+						<fieldset>
+							<!-- begin field -->
+							<div class="field">
+								<input name="page-number" type="text" class="form-input">
+							</div>
+							<!-- begin field  -->
+							<div class="field">
+								<input type="submit">
+							</div>
+						</fieldset>
+					</form>
+				</div>
+				<!-- end pagination-number -->
+
+				<!-- begin pagination-nav  -->
+				<div class="pagination-nav">
+					<a href="#" class="prev-button">&laquo; Предыдущая</a>
+					<a href="#" class="next-button">Следующая &raquo;</a>
+				</div>
+				<!-- end pagination-nav -->
+			</div>
+			<!-- end pagination -->
 			</div>
 			<!-- end advert-post -->
-
-			<!-- begin section-about  -->
+			
+		<!-- begin section-about  -->
 			<div class="section-about">
-				<div class="row">
-					<div class="logo">
-						<a href="#">
-							<img src="img/logo-2.png" alt="Wespoo">
-						</a>
-					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam totam rem aperiam totam</p>
-				</div>
 				<div class="row">
 					<p><strong>Популярные запросы:</strong> <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>, <a href="#">рубрика</a>, <a href="#">категория</a>, <a href="#">техника</a>.</p>
 				</div>
@@ -616,6 +603,7 @@
 	</div>
 	<!-- end wrapper -->
 
+	
 	<!-- begin footer  -->
 	<div class="footer">
 		<div class="container">
