--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Wespoo</title>
@@ -256,14 +257,58 @@
 						<!-- end nav-main-sub -->
 					</li>
 					<li>
-						<a href="#"><span class="icon-wrap"><i class="icon-main-help"></i></span>Нужна помощь</a>
+						<span><span class="icon-wrap"><i class="icon-main-help"></i></span>Нужна помощь</span>
+						<!-- begin nav-main-sub -->
+						<div class="nav-main-sub state-bg">
+							<h2 class="post-title mtop-0"><span class="nav-close-btn">закрыть <b>X</b> </span><a href="#">Нужна помощь <span>(смотреть все объявления)</span></a></h2>
+							<ul>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-1"></i></span>Розничная торговля / продажи</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-2"></i></span>Недвижимость</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-3"></i></span>Бары / рестораны</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-4"></i></span>Секретариат / АХО</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-5"></i></span>Домашний персонал</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-6"></i></span>Сервис и быт</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-7"></i></span>Образование</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-8"></i></span>Строительство</a></li>
+							</ul>
+						</div>
+						<!-- end nav-main-sub -->
 					</li>
 					<li>
-						<a href="#"><span class="icon-wrap"><i class="icon-main-trade"></i></span>Обмен</a>
+						<span><span class="icon-wrap"><i class="icon-main-trade"></i></span>Обмен</span>
+						<!-- begin nav-main-sub -->
+						<div class="nav-main-sub state-bg">
+							<h2 class="post-title mtop-0"><span class="nav-close-btn">закрыть <b>X</b> </span><a href="#">Обмен <span>(смотреть все объявления)</span></a></h2>
+							<ul>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-1"></i></span>Розничная торговля / продажи</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-2"></i></span>Недвижимость</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-3"></i></span>Бары / рестораны</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-4"></i></span>Секретариат / АХО</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-5"></i></span>Домашний персонал</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-6"></i></span>Сервис и быт</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-7"></i></span>Образование</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-8"></i></span>Строительство</a></li>
+							</ul>
+						</div>
+						<!-- end nav-main-sub -->
 					</li>
 					<li>
-						<a href="#"><span class="icon-wrap"><i class="icon-main-present"></i></span>Отдам даром</a>
-					</li>
+						<span><span class="icon-wrap"><i class="icon-main-present"></i></span>Отдам даром</span>
+						<!-- begin nav-main-sub -->
+						<div class="nav-main-sub state-bg">
+							<h2 class="post-title mtop-0"><span class="nav-close-btn">закрыть <b>X</b> </span><a href="#">Недвижимость <span>(смотреть все объявления)</span></a></h2>
+							<ul>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-1"></i></span>Розничная торговля / продажи</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-2"></i></span>Недвижимость</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-3"></i></span>Бары / рестораны</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-4"></i></span>Секретариат / АХО</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-5"></i></span>Домашний персонал</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-6"></i></span>Сервис и быт</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-7"></i></span>Образование</a></li>
+								<li><a href="#"><span class="icon-wrap"><i class="icon-work-img-8"></i></span>Строительство</a></li>
+							</ul>
+						</div>
+						<!-- end nav-main-sub -->
 					<li>
 						<span><span class="icon-wrap"><i class="icon-main-work"></i></span>Работа</span>
 						<!-- begin nav-main-sub -->
@@ -392,9 +437,9 @@
 									<div class="stockers-top-list">
 										<div class="vip-orange-three"><p>vip</p></div>
 									</div>
-									<div class="left-flag-orange"><div class="stic-hail-big"></div></div>
-									<div class="stic-orange"><div class="stic-smile"></div></div>
-									<div class="stic-orange"><div class="stic-tick"></div></div>
+									<div class="left-flag-orange"><div class="stic-hail-big" info-stick="big-hail"></div></div>
+									<div class="stic-orange"><div class="stic-smile" info-stick="good"></div></div>
+									<div class="stic-orange"><div class="stic-tick" info-stick="nice"></div></div>
 								</div>
 								<div class="post-list-mark icon-all-icon-mark">
 									<i class="icon-main-electro"></i>
@@ -413,9 +458,9 @@
 									<div class="stockers-top-list">
 										<div class="vip-orange"><p>vip</p></div>
 									</div>
-									<div class="stic-orange"><div class="stic-fire"></div></div>
-									<div class="stic-orange"><div class="stic-bomb"></div></div>
-									<div class="stic-orange"><div class="stic-clock"></div></div>
+									<div class="stic-orange"><div class="stic-fire" info-stick="fire"></div></div>
+									<div class="stic-orange"><div class="stic-bomb" info-stick="bobm"></div></div>
+									<div class="stic-orange"><div class="stic-clock" info-stick="time"></div></div>
 								</div>
 								<div class="post-list-mark icon-all-icon-mark">
 									<i class="icon-main-house"></i>
@@ -424,7 +469,7 @@
 									<img src="watermark.php?image=img/content/photo-w.jpg" alt="image">
 								</a>
 								<div class="post-list-in">
-									<p>Краткая инфа о товaре Краткая инфа о товaре...</p>
+									<p>Это сама краткая информация о данном товаре</p>
 									<p><i class="icon-all-star"></i>13 500 грн.</p>
 								</div>
 							</li>
@@ -468,9 +513,9 @@
 								<div class="stickers-list">
 									<div class="stockers-top-list">
 									</div>
-									<div class="left-flag-orange"><div class="stic-hail-big"></div></div>
-									<div class="stic-orange"><div class="stic-smile"></div></div>
-									<div class="stic-orange"><div class="stic-tick"></div></div>
+									<div class="left-flag-orange"><div class="stic-hail-big" info-stick="big-hail"></div></div>
+									<div class="stic-orange"><div class="stic-smile" info-stick="good"></div></div>
+									<div class="stic-orange"><div class="stic-tick" info-stick="nice"></div></div>
 								</div>
 								<div class="post-list-mark icon-all-icon-mark">
 									<i class="icon-main-transport"></i>
@@ -552,9 +597,9 @@
 									<div class="stockers-top-list">
 										<div class="vip-purple-three"><p>top</p></div>
 									</div>
-									<div class="left-flag-purple"><div class="stic-hail-big"></div></div>
-									<div class="stic-purple"><div class="stic-smile"></div></div>
-									<div class="stic-purple"><div class="stic-tick"></div></div>
+									<div class="left-flag-purple"><div class="stic-hail-big" info-stick="big-hail"></div></div>
+									<div class="stic-purple"><div class="stic-smile" info-stick="good"></div></div>
+									<div class="stic-purple"><div class="stic-tick" info-stick="nice"></div></div>
 								</div>
 							<div class="post-list-mark icon-all-icon-mark">
 								<i class="icon-main-trade"></i>
@@ -586,9 +631,9 @@
 									<div class="stockers-top-list">
 										<div class="vip-purple"><p>top</p></div>
 									</div>
-									<div class="stic-purple"><div class="stic-fire"></div></div>
-									<div class="stic-purple"><div class="stic-bomb"></div></div>
-									<div class="stic-purple"><div class="stic-clock"></div></div>
+									<div class="stic-purple"><div class="stic-fire" info-stick="fire"></div></div>
+									<div class="stic-purple"><div class="stic-bomb" info-stick="bobm"></div></div>
+									<div class="stic-purple"><div class="stic-clock" info-stick="time"></div></div>
 								</div>
 							<div class="post-list-mark icon-all-icon-mark">
 								<i class="icon-main-transport"></i>
@@ -607,9 +652,9 @@
 									<div class="stockers-top-list">
 
 									</div>
-									<div class="left-flag-purple"><div class="stic-hail-big"></div></div>
-									<div class="stic-purple"><div class="stic-smile"></div></div>
-									<div class="stic-purple"><div class="stic-tick"></div></div>
+									<div class="left-flag-purple"><div class="stic-hail-big" info-stick="big-hail"></div></div>
+									<div class="stic-purple"><div class="stic-smile" info-stick="good"></div></div>
+									<div class="stic-purple"><div class="stic-tick" info-stick="nice"></div></div>
 								</div>
 							<div class="post-list-mark icon-all-icon-mark">
 								<i class="icon-main-animal"></i>
