--- a/popular requests.html
+++ b/popular requests.html
@@ -27,7 +27,7 @@
 	<div id="main" class="wrapper">
 		<!-- begin banner-top -->
 		<div class="banner-top">
-			<a href="#" class="banner-top__in"></a>
+			<a href="#" class="banner-top-in"></a>
 			<button class="close-banner-fix">x</button>
 		</div>
 		<!-- end banner-top -->
@@ -164,12 +164,12 @@
 						<li><a href=""Черновицкая >область</a></li>
 					</ul>
 				</div>
-				<ul class="sitemap__list">
+				<ul class="sitemap-list">
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">детский мир</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -192,10 +192,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">жывотные</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -218,10 +218,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">мода и стиль</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -244,10 +244,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">недвижимость</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -270,10 +270,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">дом и сад</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -296,10 +296,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">хобби, отдых и спорт</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -322,10 +322,10 @@
 						<!-- end sublist -->
 					</li>
 										<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">транспорт</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -348,10 +348,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">электроника</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -374,10 +374,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">Требуется помощь</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -400,10 +400,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">работа</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
@@ -426,10 +426,10 @@
 						<!-- end sublist -->
 					</li>
 					<!-- begin item -->
-					<li class="sitemap__item">
+					<li class="sitemap-item">
 						<a href="#">бизнес и услуги</a>
 						<!-- begin sublist -->
-						<ul class="sitemap__sublist">
+						<ul class="sitemap-sublist">
 							<li><a href="#">Велосипед </a></li>
 							<li><a href="#">Памперсы </a></li>
 							<li><a href="#">Комбинезон </a></li>
