--- a/profile_2.html
+++ b/profile_2.html
@@ -137,7 +137,7 @@
 									Лучшая покупка для дома
 								</a>
 								<a href="#" class="ad-is-edit">Редактировать</a> 
-								<a href="#" class="ad-is-edit">Удалить</a>
+								<a href="#" class="ad-is-edit del-edit">Удалить</a>
 								<span class="ad-is-numb"> 4</span>
 								<span>15 500 грн.</span>
 							</div>
