--- a/add_advert.html
+++ b/add_advert.html
@@ -13,7 +13,11 @@
 	<link rel="stylesheet" href="css/jquery.fancybox-thumbs.css">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/bootstrap-theme.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.css"> 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.5.2/select2.min.css" rel="stylesheet" />
+
+
+
 </head>
 <body>
 	<!--Begin Arrow-top-->
@@ -553,7 +557,7 @@
 							<label>Город <span class="text-orange">*</span></label>
 						</div>
 						<div class="area-form">
-							<div class="area-form-in" id="errorCity">
+							<div class="area-form-in " id="errorCity">
 								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCity">
 									<option value="">Укажите город</option>
 									<option value="Киев">Киев</option>
@@ -562,6 +566,47 @@
 								<i class="icon-success"></i>
 							</div>
 						</div>
+
+						<div class="col-md-4" style="margin:50px">
+<select class="form-control selects" >
+  <option></option>
+    <optgroup label="Alaskan/Hawaiian Time Zone">
+      <option value="AK">Alaska</option>
+      <option value="HI">Hawaii</option>
+    </optgroup>
+    <optgroup label="Pacific Time Zone">
+      <option value="CA">California</option>
+      <option value="NV">Nevada</option>
+      <option value="OR">Oregon</option>
+      <option value="WA">Washington</option>
+    </optgroup>
+    <optgroup label="Mountain Time Zone">
+      <option value="AZ">Arizona</option>
+      <option value="CO">Colorado</option>
+      <option value="ID">Idaho</option>
+      <option value="MT">Montana</option><option value="NE">Nebraska</option>
+      <option value="NM">New Mexico</option>
+      <option value="ND">North Dakota</option>
+      <option value="UT">Utah</option>
+      <option value="WY">Wyoming</option>
+    </optgroup>
+    <optgroup label="Central Time Zone">
+      <option value="AL">Alabama</option>
+      <option value="AR">Arkansas</option>
+      <option value="IL">Illinois</option>
+      <option value="IA">Iowa</option>
+      <option value="KS">Kansas</option>
+      <option value="KY">Kentucky</option>
+      <option value="LA">Louisiana</option>
+      <option value="MN">Minnesota</option>
+      <option value="MS">Mississippi</option>
+      <option value="MO">Missouri</option>
+    </optgroup>
+</select>
+
+</div>
+						
+						
 					</div>
 					<!-- begin field -->
 					<div class="field h-line">
@@ -742,7 +787,7 @@
 			<!-- begin footer-bottom  -->
 			<div class="footer-bottom col-xs-12">
 				<a href="#" class="footer-logo"><img src="img/logo-2.png" alt="Wespoo"></a>
-				<p>&copy; Wespoo.com. Все права защищены.</p>
+				<p>&copy; Wespoo.com Все права защищены.</p>
 				<p>Разработка и поддержка <a href="#">MTITM</a></p>
 			</div>
 			<!-- end footer-bottom -->
@@ -752,6 +797,10 @@
 		</div>
 	</div>
 	<!-- end footer -->
+
+
+
+
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
@@ -764,5 +813,12 @@
 	<script src='js/dropzone.js'></script>
 	<script src="js/lightbox.js"></script>
 	<script src="js/main.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/3.5.2/select2.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function(){
+        $( ".selects" ).select2( { placeholder: "Select a State"} );
+    });
+  </script>
 </body>
 </html>
